# scrvusd

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
contracts/: DepositLimitModule.vy  RewardsHandler.vy  StablecoinLens.vy  TWA.vy  TWAP.vy
contracts/interfaces/: IController.vyi  IControllerFactory.vyi  IDynamicWeight.vyi  IMonetaryPolicy.vyi  IPegKeeper.vyi  IStablecoinLens.vyi  IStrategy.vyi  IVault.vyi
contracts/yearn/: AccrualStrategy.sol  DummyStrategy.sol  Vault.vy  VaultFactory.vy
scripts/: debug_tests.py  deploy_scrvusd.ipynb
tests/hypothesis/: conftest.py  utils.py
tests/hypothesis/e2e/: stateful_base.py  strategies.py
tests/hypothesis/twa/: stateful_base.py  test_twa.py
tests/integration/: address_book.py  conftest.py  test_deploy_vault.py  test_dynamic_weight.py  test_fee_splitter.py  test_fork_circulating_supply.py  test_stablecoin_lens.py  test_stableswap.py  utils.py
tests/integration/curve_pools/: conftest.py  test_stableswap.py  utils.py
tests/integration/interfaces/: CurveStableSwapNG.vyi  IFeeSplitter.vyi
tests/mocks/: MockController.vy  MockControllerFactory.vy  MockLens.vy  MockMonetaryPolicy.vy  MockPegKeeper.vy
tests/unitary/: conftest.py
tests/unitary/deposit_limit_module/: test_available_deposit_limit.py  test_internal_set_admin.py  test_internal_set_controller.py  test_internal_set_deposit_limit.py  test_internal_set_deposits_paused.py  test_set_admin.py  test_set_controller.py  test_set_deposit_limit.py  test_set_deposits_paused.py
tests/unitary/rewards_handler/: test_distribution_time.py  test_implements_interface.py  test_internal_set_minimum_weight.py  test_internal_set_stablecoin_lens.py  test_minimum_weight.py  test_process_rewards.py  test_recover_erc20.py  test_rh_constructor.py  test_set_distribution_time.py  test_set_minimum_weight.py  test_set_scaling_factor.py  test_set_stablecoin_lens.py  test_set_twa_frequency.py  test_set_twa_window.py  test_take_snapshot.py  test_twap.py  test_vault.py  test_weight.py
tests/unitary/stablecoin_lens/: test_circulating_supply.py
tests/unitary/twa/: conftest.py  test_internal_compute.py  test_internal_set_min_snapshot_dt_seconds.py  test_internal_set_twa_window.py  test_internal_store_snapshot.py  test_internal_take_snapshot.py  test_twa.py
tests/unitary/yearn/: test_deposit.py  test_rewards.py  test_rewards_loop.py
