[tool.poetry]
name = "stcrvusd"
version = "0.1.0"
description = ""
authors = ["Curve.fi"]
readme = "README.md"
package-mode = false


[tool.black]
line-length = 100
target_version = ['py312']

[tool.poetry.dependencies]
python = "^3.12.6"
poetry = "^1.8.3"
vyper = "0.4.0"
snekmate = "0.1.0"
titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", rev = "4768207288ec8fb23a4817ae193bd707ab9d1e8f" }
boa-solidity = { git = "https://github.com/AlbertoCentonze/boa-solidity", rev = "500d2e9a6950eb3193c5a6a1d4637cd3e3befa77"}



[tool.poetry.group.dev.dependencies]
mamushi = "0.0.4a3"
pre-commit = "^3.8.0"
black = "24.8.0"
pytest = "^8.2.2"
pytest-xdist = "^3.6.1"

[tool.poetry.group.scripts.dependencies]
tqdm = "^4.66.5"
curve-dao = "^1.0.0"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
