[project]
name            = "scrvusd"
version         = "0.1.0"
description     = ""
authors         = [{ name = "Curve.fi", email = "info@curve.fi" }]
readme          = "README.md"
requires-python = "==3.12.6"

# Requirements
dependencies = [
    "vyper>=0.4.0",
    "snekmate==0.1.0",
    "titanoboa", # Keep this as a placeholder in the dependencies array
]

[tool.uv.sources]
titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", rev = "a52c79c67ba0e00ceafc70f9daf730c9a57f27c9" }

[tool.uv]
dev-dependencies = [
    "pytest-xdist>=3.6.1",
    "mamushi==0.0.4a3",
    "pre-commit==3.8.0",
    "ruff==0.6.9",
    "pytest==8.2.2",
    "pytest-xdist==3.6.1",
    "plyvel-ci==1.5.1",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools", "wheel"]
